[package]
name = "nonewhite-site-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
bcrypt = "0.17"
dotenvy = "0.15"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["chrono", "postgres", "runtime-tokio"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
