[package]
name = "nonewhite-site-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
base64 = "0.22"
bcrypt = "0.17"
dotenvy = "0.15"
hmac = "0.12"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
sqlx = { version = "0.8", features = ["chrono", "postgres", "runtime-tokio"] }
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
